--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.marcin.helloandroid.MainActivity"
+    tools:context="com.example.android.firstproject.MainActivity"
     android:background="#FAFBFD">
 
     <ImageView
