--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="background_color">#FAFBFD</color>
+    <color name="footer_background_color">#2C3C49</color>
+    <color name="text_color">#2C3C49</color>
+
+    <color name="colorPrimary">#fff</color>
+    <color name="colorPrimaryDark">#2C3C49</color>
+    <color name="colorAccent">#000</color>
 </resources>
